welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:4: error: '=>' expected but '=' found.
    case "L" =gauche();dance(litMessage)
             ^